--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   },
   "homepage": "https://github.com/Spaghet/Giants_LineBot#readme",
   "dependencies": {
+    "body": "^5.1.0",
+    "express": "^4.13.4",
     "request": "^2.70.0"
   }
 }
